--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <script src="https://unpkg.com/redux@4.1.0/dist/redux.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react-redux/7.2.4/react-redux.js"></script>
 
+    <script src="data.js"></script>
+    <script src="logic.js"></script>
+
     <script src="actions.js"></script>
     <script src="reducers.js"></script>
 
